# goit-python-ds

./: .gitignore  README.md  pyproject.toml
goit-ds-hw-02/: .gitignore  README.md  main.py  pyproject.toml
goit-ds-hw-02/task_manager/data/: create_db.py  db_utils.py  seed.py  task_manager.sql
goit-ds-hw-02/task_manager/services/: tasks.py  users.py
goit-ds-hw-03/: Dockerfile  README.md  main.py  pyproject.toml
goit-ds-hw-03/mongo_homework/: db.py  db_functions.py  decorators.py  main.py  seeds.py
goit-ds-hw-03/scraper/: main.py
module1/: default_logger.py  log.py  my_logger.py  readme.md
module1/app-poetry/: pyproject.toml
module2/example/: create_db.py  seed.py  select.py  test.db  update.py
module2/examplesql/: Dockerfile  fill_data.py  pyproject.toml  salary.db
module3/: example.py  mongo.py  my_books.db  scraping.py
module3/beautiful-soup-parcer/: kacapy.json  main.py
module3/infowar/: links.json  losses.json
module3/infowar/infowar/: pipelines.py  settings.py
module3/infowar/infowar/spiders/: get_losses.py  get_urls.py
module3/scrapyscript/: main.py
module3/selenium_spider/: main.py
module3/web-scraper/: authors.json  main.py
