[tool.poetry]
name = "goit-python-ds"
version = "0.1.0"
description = ""
authors = ["artur.trotskyi <artur.trotskyi@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.8"
faker = "^35.0.0"
pymongo = "^4.10.1"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
sqlalchemy = "^2.0.37"
requests = "^2.32.3"
scrapy = "^2.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
