[tool.poetry]
name = "app-poetry"
version = "0.1.0"
description = ""
authors = ["artur.trotskyi <artur.trotskyi@ukr.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
